# VCodeEngineProject

./: .gitignore  CMakeLists.txt
StratEngine/: StratEngine.h
StratEngine/src/: Core.cpp  Core.h
StratEngine/src/WinWindow/: WinWindow.cpp  WinWindow.h
UserApplication/: Application.cpp
